--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "helmet": "^7.1.0",
     "qrcode": "^1.5.4",
     "rate-limiter-flexible": "^4.0.1",
+    "resend": "^6.6.0",
     "stripe": "^14.11.0"
   },
   "devDependencies": {
